# notex-be

./: .env.example  .gitignore  .pre-commit-config.yaml  00_START_HERE.md  ARCHITECTURE_DIAGRAM.md  BEFORE_AFTER_COMPARISON.md  Caddyfile  DEBUGGING_CHECKLIST.md  Dockerfile  FILE_SUMMARY.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION.md  MCP_QUICKSTART.md  Makefile  PROJECT_COMPLETE.md  PROPOSAL_STATUS_FIX.md  PROPOSAL_STATUS_FLOW.md  README.md  REFACTORING_SUMMARY.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_guest_auth.py  0003_idempotency_constraint.py  0004_items_unified.py  0005_devices.py  0006_user_settings.py
app/: __init__.py  main.py
app/auth/: __init__.py  security.py
app/core/: config.py  errors.py  logging.py  middleware.py
app/db/: base.py  session.py
app/events/: bus.py  redis_pubsub.py  redis_streams.py  websocket_manager.py
app/llm/: base.py  errors.py  factory.py  gemini_provider.py  intent_classifier.py  intent_router.py  mcp_client.py  openai_provider.py  prompts.py  router.py
app/mcp_server/: http_bridge.py  (+1 more)
scripts/: cli_chat.py  pharmacy_test.py  smoke_test_mcp.py  test_mcp_endpoints.sh
tests/: conftest.py  test_auth.py  test_clarification_id.py  test_conflict_confirmation.py  test_datetime_formatting.py  test_idempotency.py  test_integration.py  test_list_all_tasks.py  test_llm_errors.py  test_message_ops.py  test_proposal_integration.py  test_proposal_status.py  test_resolver.py  test_similarity.py  test_time_confirmation.py  test_time_utils.py  test_timezone_conflict_bug.py  test_turkish_time_parsing.py  test_user_settings.py
(+86 files in other folders)
